@@ -1,2 +1,0 @@
-[default]
-cache=Cache_httpcache_for_proxy
